# PiHoleMCP

./: .gitignore  LICENSE  README.md  install.sh  uninstall.sh  upgrade.sh
docker/: Dockerfile  docker-compose.standalone.yml  docker-compose.yml
docs/: api-mapping.md  connect-claude.md  tls.md  tools.md  troubleshooting.md
install/: Caddyfile  Caddyfile.tls  pihole-mcp.service  pihole-setup-vars.example  post-install.sh
install/logrotate.d/: pihole-mcp
mcp/: .env.example  pyproject.toml
mcp/src/pihole_mcp/: __init__.py  __main__.py  config.py  server.py
mcp/src/pihole_mcp/middleware/: __init__.py  audit.py  auth.py  origin.py  rate_limit.py
mcp/src/pihole_mcp/pihole/: __init__.py  client.py  errors.py  models.py  session.py  transport.py
mcp/src/pihole_mcp/prompts/: __init__.py  audit_blocklists.py  daily_summary.py  investigate_block.py  lockdown_device.py  unblock_temporarily.py
mcp/src/pihole_mcp/resources/: __init__.py  help.py  overview.py  recent_changes.py  topology.py
mcp/src/pihole_mcp/tools/: __init__.py  adlists.py  clients.py  config_tools.py  dhcp.py  dns.py  domains.py  groups.py  history.py  logs.py  messages.py  network.py  queries.py  stats.py  system.py  teleporter.py
mcp/src/pihole_mcp/util/: __init__.py  cache.py  jobs.py  validators.py
mcp/tests/: conftest.py  test_client.py  test_middleware.py  test_session.py  test_validators.py
