[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pihole-mcp"
version = "0.1.0"
description = "MCP server exposing the Pi-hole v6 REST API as model-callable tools."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ethan Orr" }]
keywords = ["pihole", "mcp", "dns", "ad-blocking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
pihole-mcp = "pihole_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pihole_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
